Added a button at the bottom for a submit form - will form basis to test API

--- a/app/globals.css
+++ b/app/globals.css
@@ -133,5 +133,6 @@
 html, body {
   font-family: "PressStart2P", sans-serif;
   max-width: 100%;
-  overflow-x: hidden;
+  overflow-x: hidden; 
+  scrollbar-gutter: stable;
 }
